--- a/examples/emergenet_examples.ipynb
+++ b/examples/emergenet_examples.ipynb
@@ -8,9 +8,6 @@
     "# Example Using emergenet.emergenet\n",
     "- Compares risk assesment from IRAT and risk assessment using Emergenet\n",
     "- Analyzes HA and NA segments of A/Ohio/13/2017 (H3N2), which was evaluated by IRAT on July 2019\n",
-    "- Data sources:\n",
-    "    - IRAT (CDC): https://www.cdc.gov/flu/pandemic-resources/monitoring/irat-virus-summaries.htm#H1N2variant\n",
-    "    - GISAID: https://platform.epicov.org/epi3/cfrontend#586f5f\n",
     "- Collected Human HA and NA strains within one year prior to IRAT analysis (July 1, 2018 - June 30, 2019)"
    ]
   },
@@ -211,8 +208,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 21s, sys: 504 ms, total: 3min 22s\n",
-      "Wall time: 3min 23s\n"
+      "CPU times: user 3min 25s, sys: 1.56 s, total: 3min 27s\n",
+      "Wall time: 3min 40s\n"
      ]
     }
    ],
@@ -226,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2edc3ee8",
    "metadata": {},
    "outputs": [],
@@ -238,17 +235,17 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c6751515",
+   "id": "3f5791e4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.021191122262609167\n",
-      "Variance: 1.8245878008638754e-05\n",
-      "CPU times: user 44.3 s, sys: 47.1 ms, total: 44.4 s\n",
-      "Wall time: 46.8 s\n"
+      "Emergence Risk Score: 0.02031589645039965\n",
+      "Variance: 1.673019568927244e-05\n",
+      "CPU times: user 33.3 s, sys: 123 ms, total: 33.4 s\n",
+      "Wall time: 33.4 s\n"
      ]
     }
    ],
@@ -271,11 +268,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.021214226673405615\n",
-      "Bounds: [0.020918310823352056, 0.02165178113936029]\n",
-      "Variance: 1.7815070152660578e-05\n",
-      "CPU times: user 7min 37s, sys: 155 ms, total: 7min 38s\n",
-      "Wall time: 7min 43s\n"
+      "Emergence Risk Score: 0.02032809780571675\n",
+      "Bounds: [0.02000448302209821, 0.02072229924271158]\n",
+      "Variance: 1.630070886429651e-05\n",
+      "CPU times: user 5min 32s, sys: 316 ms, total: 5min 33s\n",
+      "Wall time: 5min 33s\n"
      ]
     }
    ],
@@ -456,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4b423757",
    "metadata": {},
    "outputs": [
@@ -464,8 +461,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min, sys: 247 ms, total: 2min 1s\n",
-      "Wall time: 2min 1s\n"
+      "CPU times: user 2min 3s, sys: 366 ms, total: 2min 4s\n",
+      "Wall time: 2min 4s\n"
      ]
     }
    ],
@@ -479,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "90aa211f",
    "metadata": {},
    "outputs": [],
@@ -490,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "90c01096",
    "metadata": {},
    "outputs": [
@@ -498,10 +495,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.03134153156313136\n",
-      "Variance: 1.1981003862325916e-05\n",
-      "CPU times: user 34.6 s, sys: 11 ms, total: 34.6 s\n",
-      "Wall time: 35 s\n"
+      "Emergence Risk Score: 0.030500919904243758\n",
+      "Variance: 1.5647677590483994e-05\n",
+      "CPU times: user 25.1 s, sys: 9 ms, total: 25.1 s\n",
+      "Wall time: 25.1 s\n"
      ]
     }
    ],
@@ -516,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cfa5545e",
    "metadata": {},
    "outputs": [
@@ -524,11 +521,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.03133651652962265\n",
-      "Bounds: [0.030978042769287152, 0.031667624032359044]\n",
-      "Variance: 1.1760069536053086e-05\n",
-      "CPU times: user 6min 9s, sys: 128 ms, total: 6min 9s\n",
-      "Wall time: 6min 14s\n"
+      "Emergence Risk Score: 0.03050774244062029\n",
+      "Bounds: [0.030194376467103805, 0.030851319190176453]\n",
+      "Variance: 1.541896855842682e-05\n",
+      "CPU times: user 4min 21s, sys: 45.6 ms, total: 4min 21s\n",
+      "Wall time: 4min 21s\n"
      ]
     }
    ],
@@ -562,7 +559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergenet potential emergence estimate: 0.025771\n",
+      "Emergenet potential emergence estimate: 0.024893\n",
       "IRAT potential emergence estimate: 6.6\n"
      ]
     }
@@ -601,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
