--- a/paper_data_v2/irat_enet/animal_predictions.ipynb
+++ b/paper_data_v2/irat_enet/animal_predictions.ipynb
@@ -34,8 +34,8 @@
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "\n",
-    "from emergenet import Enet, save_model, load_model\n",
-    "from quasinet.qnet import Qnet, qdistance, qdistance_matrix, membership_degree, save_qnet, load_qnet\n",
+    "# emergenet\n",
+    "from emergenet import Enet, save_model, load_model, irat_risk\n",
     "from zedstat.textable import textable"
    ]
   },
@@ -64,20 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input: na risk, ha risk, geometric mean\n",
-    "# output: emergence and impact predictions\n",
-    "def predict_irat(emergence_mod, impact_mod, ha_risk, na_risk, geom_mean):\n",
-    "    df = pd.DataFrame({'Geometric_Mean':[geom_mean],\n",
-    "                       'HA_Avg_Qdist':[ha_risk],\n",
-    "                       'NA_Avg_Qdist':[na_risk]})\n",
-    "    emergence_risk = emergence_mod.predict(df)[0]\n",
-    "    impact_risk = impact_mod.predict(df)[0]\n",
-    "    if geom_mean > 0.3:\n",
-    "        emergence_risk = 3.8\n",
-    "        impact_risk = 4.45\n",
-    "    return emergence_risk, impact_risk\n",
-    "\n",
-    "\n",
     "# input: fasta file name, length to truncate each sequence\n",
     "# output: dataframe of sequences (containing only name and accession)\n",
     "def parse_fasta(file_name, trunc):\n",
@@ -126,76 +112,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3b2d1d29",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                  Generalized Linear Model Regression Results                   \n",
-      "================================================================================\n",
-      "Dep. Variable:     IRAT_Emergence_Score   No. Observations:                   20\n",
-      "Model:                              GLM   Df Residuals:                       17\n",
-      "Model Family:                  Gaussian   Df Model:                            2\n",
-      "Link Function:                 identity   Scale:                         0.70699\n",
-      "Method:                            IRLS   Log-Likelihood:                -23.286\n",
-      "Date:                  Sat, 17 Jun 2023   Deviance:                       12.019\n",
-      "Time:                          10:43:17   Pearson chi2:                     12.0\n",
-      "No. Iterations:                       3                                         \n",
-      "Covariance Type:              nonrobust                                         \n",
-      "=============================================================================================\n",
-      "                                coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "---------------------------------------------------------------------------------------------\n",
-      "Intercept                     6.8626      0.452     15.166      0.000       5.976       7.749\n",
-      "Geometric_Mean              -22.3009      8.365     -2.666      0.008     -38.695      -5.907\n",
-      "HA_Avg_Qdist:NA_Avg_Qdist    40.9355     27.261      1.502      0.133     -12.495      94.366\n",
-      "=============================================================================================\n",
-      "                 Generalized Linear Model Regression Results                  \n",
-      "==============================================================================\n",
-      "Dep. Variable:      IRAT_Impact_Score   No. Observations:                   20\n",
-      "Model:                            GLM   Df Residuals:                       17\n",
-      "Model Family:                Gaussian   Df Model:                            2\n",
-      "Link Function:               identity   Scale:                         0.96709\n",
-      "Method:                          IRLS   Log-Likelihood:                -26.419\n",
-      "Date:                Sat, 17 Jun 2023   Deviance:                       16.441\n",
-      "Time:                        10:43:17   Pearson chi2:                     16.4\n",
-      "No. Iterations:                     3                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "=============================================================================================\n",
-      "                                coef    std err          z      P>|z|      [0.025      0.975]\n",
-      "---------------------------------------------------------------------------------------------\n",
-      "Intercept                     6.8383      0.529     12.921      0.000       5.801       7.876\n",
-      "Geometric_Mean              -19.7235      9.783     -2.016      0.044     -38.898      -0.549\n",
-      "HA_Avg_Qdist:NA_Avg_Qdist    40.2905     31.884      1.264      0.206     -22.201     102.782\n",
-      "=============================================================================================\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = pd.read_csv('results/irat_average_qdistances.csv')\n",
-    "data = data.rename(columns={'Potential Emergence Estimate':'IRAT_Emergence_Score',\n",
-    "                            'Potential Impact Estimate':'IRAT_Impact_Score',\n",
-    "                            'Avg. Geometric Mean':'Geometric_Mean',\n",
-    "                            'Avg. HA Qdistance':'HA_Avg_Qdist',\n",
-    "                            'Avg. NA Qdistance':'NA_Avg_Qdist'})\n",
-    "# remove Yunnan and Netherlands outliers, and Duck strain\n",
-    "data = data[(data['HA_Avg_Qdist'] > 0) & (data['NA_Avg_Qdist'] > 0)].drop(labels=[10, 12], axis=0)\n",
-    "\n",
-    "# complex emergence model\n",
-    "formula1 = 'IRAT_Emergence_Score ~ Geometric_Mean + HA_Avg_Qdist:NA_Avg_Qdist'\n",
-    "mod1 = smf.glm(formula=formula1, data=data).fit()\n",
-    "print(mod1.summary())\n",
-    "\n",
-    "# complex impact model\n",
-    "formula2 = 'IRAT_Impact_Score ~ Geometric_Mean + HA_Avg_Qdist:NA_Avg_Qdist'\n",
-    "mod2 = smf.glm(formula=formula2, data=data).fit()\n",
-    "print(mod2.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "bd8583bf",
    "metadata": {},
@@ -230,7 +146,6 @@
     "    df2 = pd.read_csv(OUT_DIR + FILE + '.csv')\n",
     "    df2['ha_risk'] = df2['ha_risk'].apply(eval)\n",
     "    df2['na_risk'] = df2['na_risk'].apply(eval)\n",
-    "    df2['geometric_mean_risk'] = df2['geometric_mean_risk'].apply(eval)\n",
     "    emergence_risks = []\n",
     "    emergence_risks_var = []\n",
     "    impact_risks = []\n",
@@ -238,11 +153,10 @@
     "    for i in range(len(df2)):\n",
     "        ha = df2['ha_risk'].iloc[i]\n",
     "        na = df2['na_risk'].iloc[i]\n",
-    "        gm = df2['geometric_mean_risk'].iloc[i]\n",
     "        emergence_risk = []\n",
     "        impact_risk = []\n",
     "        for j in range(10):\n",
-    "            er, ir = predict_irat(mod1, mod2, ha[j], na[j], gm[j])\n",
+    "            er, ir = predict_irat(ha[j], na[j])\n",
     "            emergence_risk.append(er)\n",
     "            impact_risk.append(ir)\n",
     "        emergence_risks.append(np.mean(emergence_risk))\n",
