--- a/paper_data_v2/irat_enet/linear_models.ipynb
+++ b/paper_data_v2/irat_enet/linear_models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "id": "f94d4da8",
    "metadata": {},
    "outputs": [],
@@ -28,12 +28,15 @@
     "import statsmodels.formula.api as smf\n",
     "\n",
     "# textable\n",
-    "from zedstat.textable import textable"
+    "from zedstat.textable import textable\n",
+    "\n",
+    "# emergenet\n",
+    "from emergenet import Enet, irat_risk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "id": "a0a10811",
    "metadata": {},
    "outputs": [],
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 38,
    "id": "30aeb152",
    "metadata": {},
    "outputs": [
@@ -71,9 +74,9 @@
       "Model Family:                  Gaussian   Df Model:                            1\n",
       "Link Function:                 identity   Scale:                         0.75627\n",
       "Method:                            IRLS   Log-Likelihood:                -24.532\n",
-      "Date:                  Tue, 14 Mar 2023   Deviance:                       13.613\n",
-      "Time:                          18:59:03   Pearson chi2:                     13.6\n",
-      "No. Iterations:                       3   Pseudo R-squ. (CS):             0.7465\n",
+      "Date:                  Sun, 16 Jul 2023   Deviance:                       13.613\n",
+      "Time:                          11:05:16   Pearson chi2:                     13.6\n",
+      "No. Iterations:                       3                                         \n",
       "Covariance Type:              nonrobust                                         \n",
       "==================================================================================\n",
       "                     coef    std err          z      P>|z|      [0.025      0.975]\n",
@@ -89,9 +92,9 @@
       "Model Family:                  Gaussian   Df Model:                            2\n",
       "Link Function:                 identity   Scale:                         0.70699\n",
       "Method:                            IRLS   Log-Likelihood:                -23.286\n",
-      "Date:                  Tue, 14 Mar 2023   Deviance:                       12.019\n",
-      "Time:                          18:59:03   Pearson chi2:                     12.0\n",
-      "No. Iterations:                       3   Pseudo R-squ. (CS):             0.7956\n",
+      "Date:                  Sun, 16 Jul 2023   Deviance:                       12.019\n",
+      "Time:                          11:05:16   Pearson chi2:                     12.0\n",
+      "No. Iterations:                       3                                         \n",
       "Covariance Type:              nonrobust                                         \n",
       "=============================================================================================\n",
       "                                coef    std err          z      P>|z|      [0.025      0.975]\n",
@@ -108,9 +111,9 @@
       "Model Family:                Gaussian   Df Model:                            1\n",
       "Link Function:               identity   Scale:                         0.99916\n",
       "Method:                          IRLS   Log-Likelihood:                -27.317\n",
-      "Date:                Tue, 14 Mar 2023   Deviance:                       17.985\n",
-      "Time:                        18:59:03   Pearson chi2:                     18.0\n",
-      "No. Iterations:                     3   Pseudo R-squ. (CS):             0.4553\n",
+      "Date:                Sun, 16 Jul 2023   Deviance:                       17.985\n",
+      "Time:                        11:05:16   Pearson chi2:                     18.0\n",
+      "No. Iterations:                     3                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==================================================================================\n",
       "                     coef    std err          z      P>|z|      [0.025      0.975]\n",
@@ -126,9 +129,9 @@
       "Model Family:                Gaussian   Df Model:                            2\n",
       "Link Function:               identity   Scale:                         0.96709\n",
       "Method:                          IRLS   Log-Likelihood:                -26.419\n",
-      "Date:                Tue, 14 Mar 2023   Deviance:                       16.441\n",
-      "Time:                        18:59:03   Pearson chi2:                     16.4\n",
-      "No. Iterations:                     3   Pseudo R-squ. (CS):             0.5105\n",
+      "Date:                Sun, 16 Jul 2023   Deviance:                       16.441\n",
+      "Time:                        11:05:16   Pearson chi2:                     16.4\n",
+      "No. Iterations:                     3                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "=============================================================================================\n",
       "                                coef    std err          z      P>|z|      [0.025      0.975]\n",
@@ -155,21 +158,27 @@
     "formula1 = 'IRAT_Emergence_Score ~ Geometric_Mean'\n",
     "mod1 = smf.glm(formula=formula1, data=data).fit()\n",
     "save_print_model(mod1, 'model_emergence_simple.txt')\n",
+    "mod1.save('results/glm_models/model_emergence_simple.pickle')\n",
     "\n",
     "# complex emergence model\n",
     "formula2 = 'IRAT_Emergence_Score ~ Geometric_Mean + HA_Avg_Qdist:NA_Avg_Qdist'\n",
     "mod2 = smf.glm(formula=formula2, data=data).fit()\n",
     "save_print_model(mod2, 'model_emergence_complex.txt')\n",
+    "mod2.save('results/glm_models/model_emergence_complex.pickle')\n",
+    "mod2.save('models/irat_emergence.pickle')\n",
     "\n",
     "# simple impact model\n",
     "formula3 = 'IRAT_Impact_Score ~ Geometric_Mean'\n",
     "mod3 = smf.glm(formula=formula3, data=data).fit()\n",
     "save_print_model(mod3, 'model_impact_simple.txt')\n",
+    "mod3.save('results/glm_models/model_impact_simple.pickle')\n",
     "\n",
     "# complex impact model\n",
     "formula4 = 'IRAT_Impact_Score ~ Geometric_Mean + HA_Avg_Qdist:NA_Avg_Qdist'\n",
     "mod4 = smf.glm(formula=formula4, data=data).fit()\n",
-    "save_print_model(mod4, 'model_impact_complex.txt')"
+    "save_print_model(mod4, 'model_impact_complex.txt')\n",
+    "mod4.save('results/glm_models/model_impact_complex.pickle')\n",
+    "mod4.save('models/irat_impact.pickle')"
    ]
   },
   {
@@ -182,36 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "4d928af3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input: na risk, ha risk, geometric mean\n",
-    "# output: emergence and impact predictions\n",
-    "def predict_irat(emergence_mod, impact_mod, ha_risk, na_risk, geom_mean):\n",
-    "    df = pd.DataFrame({'Geometric_Mean':[geom_mean],\n",
-    "                       'HA_Avg_Qdist':[ha_risk],\n",
-    "                       'NA_Avg_Qdist':[na_risk]})\n",
-    "    emergence_risk = emergence_mod.predict(df)[0]\n",
-    "    impact_risk = impact_mod.predict(df)[0]\n",
-    "    if geom_mean > 0.3:\n",
-    "        emergence_risk = 3.8\n",
-    "        impact_risk = 4.45\n",
-    "    return emergence_risk, impact_risk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "dd2a033a",
+   "execution_count": 39,
+   "id": "a41c0e0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_irat = pd.read_csv('results/irat_average_qdistances.csv')\n",
     "df_irat['HA Qdistance'] = df_irat['HA Qdistance'].apply(eval)\n",
     "df_irat['NA Qdistance'] = df_irat['NA Qdistance'].apply(eval)\n",
-    "df_irat['Geometric Mean'] = df_irat['Geometric Mean'].apply(eval)\n",
     "\n",
     "emergence_risks = []\n",
     "emergence_risks_var = []\n",
@@ -221,7 +208,6 @@
     "for i in range(len(df_irat)):\n",
     "    ha = df_irat['HA Qdistance'].iloc[i]\n",
     "    na = df_irat['NA Qdistance'].iloc[i]\n",
-    "    gm = df_irat['Geometric Mean'].iloc[i]\n",
     "    if ha == -1:\n",
     "        emergence_risks.append(-1)\n",
     "        emergence_risks_var.append(-1)\n",
@@ -230,8 +216,8 @@
     "        continue\n",
     "    emergence_risk = []\n",
     "    impact_risk = []\n",
-    "    for j in range(len(gm)):\n",
-    "        er, ir = predict_irat(mod2, mod4, ha[j], na[j], gm[j])\n",
+    "    for j in range(len(na)):\n",
+    "        er, ir = irat_risk(ha[j], na[j])\n",
     "        emergence_risk.append(er)\n",
     "        impact_risk.append(ir)\n",
     "    emergence_risks.append(np.mean(emergence_risk))\n",
@@ -247,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 40,
    "id": "a8c7ff63",
    "metadata": {},
    "outputs": [],
@@ -266,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "724db678",
+   "execution_count": 41,
+   "id": "12ff7e52",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +302,7 @@
        "Potential Impact Estimate           0.671734     0.658506"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 42,
    "id": "4a23fb73",
    "metadata": {},
    "outputs": [
@@ -625,7 +611,7 @@
        "22    -1.000000  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,15 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "410e1c8b",
+   "execution_count": 43,
+   "id": "3f777ac4",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_irat_cur = pd.read_csv('results/irat_average_qdistances_current.csv')\n",
     "df_irat_cur['HA Qdistance'] = df_irat_cur['HA Qdistance'].apply(eval)\n",
     "df_irat_cur['NA Qdistance'] = df_irat_cur['NA Qdistance'].apply(eval)\n",
-    "df_irat_cur['Geometric Mean'] = df_irat_cur['Geometric Mean'].apply(eval)\n",
     "\n",
     "emergence_risks = []\n",
     "emergence_risks_var = []\n",
@@ -662,7 +647,6 @@
     "for i in range(len(df_irat_cur)):\n",
     "    ha = df_irat_cur['HA Qdistance'].iloc[i]\n",
     "    na = df_irat_cur['NA Qdistance'].iloc[i]\n",
-    "    gm = df_irat_cur['Geometric Mean'].iloc[i]\n",
     "    if ha == -1:\n",
     "        emergence_risks.append(-1)\n",
     "        emergence_risks_var.append(-1)\n",
@@ -671,8 +655,8 @@
     "        continue\n",
     "    emergence_risk = []\n",
     "    impact_risk = []\n",
-    "    for j in range(len(gm)):\n",
-    "        er, ir = predict_irat(mod2, mod4, ha[j], na[j], gm[j])\n",
+    "    for j in range(len(na)):\n",
+    "        er, ir = irat_risk(ha[j], na[j])\n",
     "        emergence_risk.append(er)\n",
     "        impact_risk.append(ir)\n",
     "    emergence_risks.append(np.mean(emergence_risk))\n",
@@ -688,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 44,
    "id": "5bb44eef",
    "metadata": {},
    "outputs": [],
@@ -707,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 45,
    "id": "9b0b4a30",
    "metadata": {},
    "outputs": [
@@ -757,7 +741,7 @@
        "Potential Impact Estimate           0.614943     0.607335"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 46,
    "id": "7008c751",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1050,7 @@
        "22    -1.000000  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1070,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1100,7 +1084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
