--- a/examples/domseq_examples.ipynb
+++ b/examples/domseq_examples.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "1ed06d86",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "e291abfc",
    "metadata": {},
    "outputs": [],
@@ -430,8 +430,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "e05a2cdd",
+   "execution_count": 20,
+   "id": "32f6c608",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4min 39s, sys: 1.89 s, total: 4min 41s\n",
+      "Wall time: 4min 50s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# train enet\n",
+    "enet = domseq.train(seq_df=df, sample_size=3000, n_jobs=1)\n",
+    "# save enet\n",
+    "save_model(enet=enet, outfile=DATA_DIR+'enet.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b2cf6174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load enet\n",
+    "enet_model = load_model(filepath=DATA_DIR+'enet.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "68915324",
    "metadata": {},
    "outputs": [
     {
@@ -543,51 +577,17 @@
        "4  MNPNQKIITIGSISIAIGIISLMLQIGNIISIWASHSIQTGSQNHT...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load candidate sequences for recommendation\n",
-    "pred_df = pd.read_csv(DATA_DIR+'north_h1n1_21_22_pred.csv')\n",
+    "candidate_df = pd.read_csv(DATA_DIR+'north_h1n1_21_22_pred.csv')\n",
     "\n",
-    "print('Number of sequences:', len(pred_df))\n",
-    "pred_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "32f6c608",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4min 39s, sys: 1.89 s, total: 4min 41s\n",
-      "Wall time: 4min 50s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# train enet\n",
-    "enet = domseq.train(seq_df=df, sample_size=3000, n_jobs=1)\n",
-    "# save qnet\n",
-    "save_model(enet=enet, outfile=DATA_DIR+'enet.joblib')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "b2cf6174",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load enet\n",
-    "enet_model = load_model(filepath=DATA_DIR+'enet.joblib')"
+    "print('Number of sequences:', len(candidate_df))\n",
+    "candidate_df.head()"
    ]
   },
   {
@@ -712,7 +712,7 @@
    "source": [
     "%%time\n",
     "# compute prediction sequences (return predictions from top 3 largest clusters)\n",
-    "pred_df = domseq.predict_domseq(seq_df=df, pred_seq_df=pred_df, enet=enet_model, n_clusters=3, sample_size=3000)\n",
+    "pred_df = domseq.predict_domseq(seq_df=df, pred_seq_df=candidate_df, enet=enet_model, n_clusters=3, sample_size=3000)\n",
     "pred_df = pred_df.sort_values(by=['cluster_size'], ascending=False)\n",
     "pred_df.to_csv(DATA_DIR+'predictions_for_22_23.csv', index=False)\n",
     "pred_df"
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d7e3b60",
+   "id": "9cae27fb",
    "metadata": {},
    "outputs": [],
    "source": []
