--- a/examples/emergenet_examples.ipynb
+++ b/examples/emergenet_examples.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "449063ea",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "1ed06d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from emergenet.emergenet import Enet, save_model, load_model\n",
+    "from emergenet.emergenet import Enet, save_model, load_model, irat_risk\n",
     "\n",
     "DATA_DIR = 'example_data/emergenet/'"
    ]
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "67a401c3",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "# initialize the Enet with a sequence not currently circulating\n",
+    "# initialize the Enet with A/Ohio/13/2017 HA\n",
     "enet_ha = Enet(seq=DATA_DIR+'ha_target_sequence.fasta', seq_trunc_length=550, random_state=42)\n",
     "\n",
     "print('Initializing Enet with fasta file\\n---------------------------------\\n')\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c168442d",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "9234ff53",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4  [M, K, T, I, I, A, L, S, Y, I, L, C, L, V, F, ...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "3848f9c8",
    "metadata": {},
    "outputs": [
@@ -208,14 +208,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 25s, sys: 1.56 s, total: 3min 27s\n",
-      "Wall time: 3min 40s\n"
+      "CPU times: user 4min 10s, sys: 1.13 s, total: 4min 11s\n",
+      "Wall time: 4min 11s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# train enet (automatically includes target sequence with df sequences)\n",
+    "# train enet (automatically includes target sequence with df)\n",
     "enet_ha1 = enet_ha.train(seq_df=df_ha, sample_size=1000, n_jobs=1)\n",
     "# save enet\n",
     "save_model(enet=enet_ha1, outfile=DATA_DIR+'ha_enet.joblib')"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "2edc3ee8",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "3f5791e4",
    "metadata": {},
    "outputs": [
@@ -242,47 +242,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.02031589645039965\n",
-      "Variance: 1.673019568927244e-05\n",
-      "CPU times: user 33.3 s, sys: 123 ms, total: 33.4 s\n",
-      "Wall time: 33.4 s\n"
+      "Emergenet Risk Score: 0.020315896450401664\n",
+      "Variance: 1.673019568928555e-05\n",
+      "CPU times: user 43.7 s, sys: 41.2 ms, total: 43.8 s\n",
+      "Wall time: 43.7 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# compute emergence risk score\n",
-    "emergence_risk_score_ha, variance_ha = enet_ha.emergence_risk(seq_df=df_ha, enet=enet_ha1, sample_size=1000)\n",
+    "# compute risk score\n",
+    "risk_score_ha, variance_ha = enet_ha.emergence_risk(seq_df=df_ha, enet=enet_ha1, sample_size=1000)\n",
     "\n",
-    "print('Emergence Risk Score:', emergence_risk_score_ha)\n",
+    "print('Emergenet Risk Score:', risk_score_ha)\n",
     "print('Variance:', variance_ha)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "64093a71",
+   "execution_count": 15,
+   "id": "af8445ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.02032809780571675\n",
-      "Bounds: [0.02000448302209821, 0.02072229924271158]\n",
-      "Variance: 1.630070886429651e-05\n",
-      "CPU times: user 5min 32s, sys: 316 ms, total: 5min 33s\n",
-      "Wall time: 5min 33s\n"
+      "Emergenet Risk Score: 0.020328876194469082\n",
+      "Bounds: [0.02001265632283635, 0.020721550600361946]\n",
+      "Variance: 1.6303481243028225e-05\n",
+      "CPU times: user 6min 55s, sys: 495 ms, total: 6min 55s\n",
+      "Wall time: 6min 55s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# compute emergence risk score with qsampling to get upper and lower bounds, see qsampling module\n",
+    "# compute risk score with qsampling to get upper and lower bounds, see qsampling module\n",
     "# https://zeroknowledgediscovery.github.io/quasinet/build/html/quasinet.html#quasinet.qsampling.qsample\n",
     "avg_ha, min_ha, max_ha, var_ha = enet_ha.emergence_risk_qsampling(seq_df=df_ha, enet=enet_ha1, sample_size=1000, qsamples=10, steps=10)\n",
     "\n",
-    "print('Emergence Risk Score:', avg_ha)\n",
+    "print('Emergenet Risk Score:', avg_ha)\n",
     "print('Bounds:', [min_ha, max_ha])\n",
     "print('Variance:', var_ha)"
    ]
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "0ffd676f",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "# initialize the Enet with a sequence not currently circulating\n",
+    "# initialize the Enet with A/Ohio/13/2017 NA\n",
     "enet_na = Enet(seq=DATA_DIR+'na_target_sequence.fasta', seq_trunc_length=449, random_state=42)\n",
     "\n",
     "print('Initializing Enet with fasta file\\n---------------------------------\\n')\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "1a050858",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "0d9456b6",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "4  [M, N, P, N, Q, K, I, I, T, I, G, S, V, S, L, ...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "4b423757",
    "metadata": {},
    "outputs": [
@@ -461,14 +461,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 3s, sys: 366 ms, total: 2min 4s\n",
-      "Wall time: 2min 4s\n"
+      "CPU times: user 2min 26s, sys: 682 ms, total: 2min 27s\n",
+      "Wall time: 2min 27s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# train enet (automatically includes target sequence with df sequences)\n",
+    "# train enet (automatically includes target sequence with df)\n",
     "enet_na1 = enet_na.train(seq_df=df_na, sample_size=1000, n_jobs=1)\n",
     "# save enet\n",
     "save_model(enet=enet_na1, outfile=DATA_DIR+'na_enet.joblib')"
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "90aa211f",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "90c01096",
    "metadata": {},
    "outputs": [
@@ -495,25 +495,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.030500919904243758\n",
-      "Variance: 1.5647677590483994e-05\n",
-      "CPU times: user 25.1 s, sys: 9 ms, total: 25.1 s\n",
-      "Wall time: 25.1 s\n"
+      "Emergenet Risk Score: 0.03050091990424366\n",
+      "Variance: 1.564767759048388e-05\n",
+      "CPU times: user 31.2 s, sys: 11.9 ms, total: 31.2 s\n",
+      "Wall time: 31.2 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# compute emergence risk score\n",
-    "emergence_risk_score_na, variance_na = enet_na.emergence_risk(seq_df=df_na, enet=enet_na1, sample_size=1000)\n",
+    "# compute risk score\n",
+    "risk_score_na, variance_na = enet_na.emergence_risk(seq_df=df_na, enet=enet_na1, sample_size=1000)\n",
     "\n",
-    "print('Emergence Risk Score:', emergence_risk_score_na)\n",
+    "print('Emergenet Risk Score:', risk_score_na)\n",
     "print('Variance:', variance_na)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "cfa5545e",
    "metadata": {},
    "outputs": [
@@ -521,21 +521,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergence Risk Score: 0.03050774244062029\n",
-      "Bounds: [0.030194376467103805, 0.030851319190176453]\n",
-      "Variance: 1.541896855842682e-05\n",
-      "CPU times: user 4min 21s, sys: 45.6 ms, total: 4min 21s\n",
-      "Wall time: 4min 21s\n"
+      "Emergenet Risk Score: 0.030511130875083347\n",
+      "Bounds: [0.03021676107351499, 0.030865105872841463]\n",
+      "Variance: 1.5402245650034415e-05\n",
+      "CPU times: user 5min 25s, sys: 376 ms, total: 5min 25s\n",
+      "Wall time: 5min 25s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# compute emergence risk score with qsampling to get upper and lower bounds, see qsampling module\n",
+    "# compute risk score with qsampling to get upper and lower bounds, see qsampling module\n",
     "# https://zeroknowledgediscovery.github.io/quasinet/build/html/quasinet.html#quasinet.qsampling.qsample\n",
     "avg_na, min_na, max_na, var_na = enet_na.emergence_risk_qsampling(seq_df=df_na, enet=enet_na1, sample_size=1000, qsamples=10, steps=10)\n",
     "\n",
-    "print('Emergence Risk Score:', avg_na)\n",
+    "print('Emergenet Risk Score:', avg_na)\n",
     "print('Bounds:', [min_na, max_na])\n",
     "print('Variance:', var_na)"
    ]
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "f9d5f381",
    "metadata": {},
    "outputs": [
@@ -559,18 +559,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Emergenet potential emergence estimate: 0.024893\n",
-      "IRAT potential emergence estimate: 6.6\n"
+      "Geometric Mean of HA and NA risk scores: 0.024893\n",
+      "Emergenet prediction of IRAT emergence estimate: 6.3\n",
+      "IRAT emergence estimate: 6.6\n",
+      "Emergenet prediction of IRAT impact estimate: 6.4\n",
+      "IRAT impact estimate: 5.8\n"
      ]
     }
    ],
    "source": [
-    "# compute average emergence risk (recall we used 1000 samples in each)\n",
+    "# compute geometric mean emergence risk\n",
     "import numpy as np\n",
-    "emergence_risk_score_avg = np.sqrt(emergence_risk_score_ha * emergence_risk_score_na)\n",
+    "geom_mean_risk_score = np.sqrt(risk_score_ha * risk_score_na)\n",
+    "irat_emergence_prediction, irat_impact_prediction = irat_risk(risk_score_ha, risk_score_na)\n",
     "\n",
-    "print('Emergenet potential emergence estimate:', round(emergence_risk_score_avg, 6))\n",
-    "print('IRAT potential emergence estimate: 6.6')"
+    "print('Geometric Mean of HA and NA risk scores:', round(geom_mean_risk_score, 6))\n",
+    "print('Emergenet prediction of IRAT emergence estimate:', round(irat_emergence_prediction, 1))\n",
+    "print('IRAT emergence estimate: 6.6')\n",
+    "print('Emergenet prediction of IRAT impact estimate:', round(irat_impact_prediction, 1))\n",
+    "print('IRAT impact estimate: 5.8')"
    ]
   },
   {
