--- a/paper_data_v3/enet_predictions/data_collection.ipynb
+++ b/paper_data_v3/enet_predictions/data_collection.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "## Downloading Data\n",
-    "**Sources: [GISAID](https://platform.epicov.org/epi3/cfrontend#586f5f), [NCBI](https://www.ncbi.nlm.nih.gov/labs/virus/vssi/#/virus?SeqType_s=Protein&HostLineage_ss=Homo%20sapiens%20(human),%20taxid:9606&LabHost_s=include&ProtNames_ss=hemagglutinin&CollectionDate_dr=2003-11-01T00:00:00.00Z%20TO%202004-05-01T23:59:59.00Z&SLen_i=550%20TO%20566&VirusLineage_ss=H1N1%20subtype,%20taxid:114727), [WHO](https://www.who.int/teams/global-influenza-programme/vaccines/who-recommendations/recommendations-for-influenza-vaccine-composition-archive)**\n",
+    "**Sources: [GISAID](https://platform.epicov.org/epi3/cfrontend#586f5f), [NCBI](https://www.ncbi.nlm.nih.gov/labs/virus/vssi/#/virus?SeqType_s=Protein&HostLineage_ss=Homo%20sapiens%20(human)), [WHO](https://www.who.int/teams/global-influenza-programme/vaccines/who-recommendations/recommendations-for-influenza-vaccine-composition-archive)**\n",
     "- Host: Human\n",
     "- Subtype: H1N1 or H3N2\n",
     "- Segment: HA (4) and NA (6)\n",
