--- a/paper_data_v3/enet_predictions/data_collection.ipynb
+++ b/paper_data_v3/enet_predictions/data_collection.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "## Downloading Data\n",
-    "**Sources: [GISAID](https://platform.epicov.org/epi3/cfrontend#586f5f), [NCBI](https://www.ncbi.nlm.nih.gov/labs/virus/vssi/#/virus?SeqType_s=Protein&HostLineage_ss=Homo%20sapiens%20(human)), [WHO](https://www.who.int/teams/global-influenza-programme/vaccines/who-recommendations/recommendations-for-influenza-vaccine-composition-archive)**\n",
+    "**Sources: [GISAID](https://platform.epicov.org/epi3/cfrontend#586f5f), [NCBI](https://www.ncbi.nlm.nih.gov/labs/virus/vssi/#/virus), [WHO](https://www.who.int/teams/global-influenza-programme/vaccines/who-recommendations/recommendations-for-influenza-vaccine-composition-archive)**\n",
     "- Host: Human\n",
     "- Subtype: H1N1 or H3N2\n",
     "- Segment: HA (4) and NA (6)\n",
