--- a/paper_data_v3/irat_enet/animal_predictions.ipynb
+++ b/paper_data_v3/irat_enet/animal_predictions.ipynb
@@ -234,7 +234,7 @@
     "plt.title('Frequency of Predicted IRAT Emergence Scores for Animal Viruses')\n",
     "plt.grid()\n",
     "plt.legend(fontsize=8)\n",
-    "plt.savefig('tables/animal_predictions_frequency.png',bbox_inches='tight',transparent=True);"
+    "plt.savefig('tables/animal.png',bbox_inches='tight',transparent=True);"
    ]
   }
  ],
